--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
   keynote presentations, engaging panel discussions, and interactive workshops led by renowned experts in the fields of
   education and workforce development, providing a platform to share innovative strategies and foster collaborative
   networks for a more resilient and adaptive future.</p>
-<p>I designed this one also using Figma, Photoshop, and Canva. The animations are from an Icon pack I aquired at
+<p>I designed this one also using Figma, Photoshop, and Canva. The animations are from an icon pack I aquired at
   Lordicon, check them out they're awesome! Had people asking me how I made those icons, when I told them how easy it
   was to use, all I got was bewilderment.</p>
 <h3><a href="https://www.cpp.edu/ai-summer-conference/future-of-work.shtml">Visit website</a></h3>
